<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="pendapat_pengunjung"> Pendapat Pengunjung</string>
    <string name="all_ulasan">Semua Ulasan</string>
    <string name="map_box_key">pk.eyJ1IjoiaWJudTAwMiIsImEiOiJja3g2dXExYmswOTNoMm9tbmE0cHI4dTFlIn0.kyKaPWMR7dLqfko2p6HKfQ</string>
    <string name="telfon">Telfon</string>
    <string name="web">web</string>
    <string name="email">email</string>
    <string name="service">-Pelayanan</string>
    <string name="food">-Makanan</string>
    <string name="clean">-Kebersihan</string>
    <string name="keramahan">-Keramahan</string>
    <string name="hapus_dari_bookmark">Hapus</string>

    <string-array name="pictures">
        <item>Ambil foto</item>
        <item>Dari galeri</item>
    </string-array>

    <string name="name_item_img_btn">For U</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.liquip ex ea commodo consequat.</string>
    <string name="jam_buka_tutup">11.00 PM - 04.30 AM</string>
    <string name="info_tiket">Tiket Mulai dari Rp.</string>
    <string name="harga_tiket">6000</string>

    <string name="tulis_ulasan">Tulis ulasan</string>
    <string name="nama_user">John Wick</string>
    <string name="hari_ulasan">1 hari yang lalu</string>
    <string name="guide_terbaik">Tempat Guide Terbaik</string>

    <string name="tempat_parkir">Tempat Parkir</string>

    <!--    detail event-->
    <string name="date_event">1 Desember 2021</string>
</resources>