<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:background="@drawable/border_style"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/img_usr_ulasan"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@color/black" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/nama_usr_ulasan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/nama_user"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/hari_usr_ulasan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/hari_ulasan"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <RatingBar
        android:id="@+id/recommendationRating"
        style="@style/customRatingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:numStars="5"
        android:rating="5" />


    <TextView
        android:id="@+id/tv_tempat_guide_terbaik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/guide_terbaik"
        android:textColor="@color/black"
        android:layout_marginBottom="15sp"
        android:textSize="15sp" />

</LinearLayout>
