<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="@dimen/space">

    <LinearLayout
        android:paddingVertical="@dimen/space"
        android:paddingHorizontal="@dimen/space_double"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Ajukan pertanyaan melalui:"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/font_medium"
            android:textStyle="bold" />

        <LinearLayout
            android:weightSum="3"
            android:layout_marginTop="@dimen/space_double"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <LinearLayout
                android:layout_marginHorizontal="@dimen/space_double"
                android:id="@+id/layoutTelfon"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_double"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <ImageView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_phone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telfon"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutWeb"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_double"
                android:layout_marginTop="@dimen/space_double"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_web" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/web"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutEmail"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/space_double"
                android:layout_marginTop="@dimen/space_double"
                android:clickable="true"
                android:focusable="true"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/ic_email" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>